--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <div class="header-content">
         <div class="header-left">
           <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-          <p class="site-description">{{ site.description }}</p>
+          <!-- <p class="site-description">{{ site.description }}</p> -->
         </div>
 
         {%- assign default_paths = site.pages | map: "path" -%}
